--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rcc"
 version = "0.1.0"
 authors = ["Shion Yamashita <shioyama1118@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 peek-nth = "0.2.0"
